--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -1,6 +1,6 @@
-// $main-color: #F8BA4F;
+$main-color: #EDA4A6;
 $secondary: #ff9a50;
-$main-color: #99B2DD;
+// $main-color: #99B2DD;
 $accent: #FFFD98;
 
 body {
@@ -140,8 +140,9 @@ footer {
 .title-card {
     text-align: center;
     height: 60vh;
-    background: rgb(255,154,80);
-    background: linear-gradient(45deg, rgba(255,154,80,1) 0%, rgba(255,253,152,1) 100%);
+    background: rgba($secondary, 0.4);
+    // background: rgb(153,178,221);
+    // background: linear-gradient(140deg, rgba(153,178,221,1) 0%, rgba(255,154,80,1) 20%, rgba(255,253,152,1) 63%, rgba(153,178,221,1) 100%);
     grid-column: 1 / span 5;
     display: flex;
     align-items: center;
@@ -164,5 +165,31 @@ footer {
         margin: 0;
         font-size: 2.5rem;
         color: darken($main-color, 20%);
+    }
+}
+
+.project-phases {
+    grid-column: 1 / span 5;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    margin: 0 0 5rem 0;
+
+    .phase {
+        text-align: center;
+        height: 50vh;
+        border-bottom: 1px solid $accent;
+        border-top: 1px solid $accent;
+        display: flex;
+        align-items: center;
+        align-content: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        background: rgba($secondary, 0.4);
+
+        * {
+            width: 100%;
+            margin: 0;
+        }
     }
 }
