--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -1,7 +1,27 @@
-$main-color: #FEC486;
+$main-color: #ABAB73;
+// $main-color: #809D84;
 $secondary: #ff9a50;
 // $main-color: #99B2DD;
 $accent: #FFFD98;
+
+@font-face {
+    font-family: 'Erode';
+    src: url('../assets/fonts/Erode-Variable.woff2') format('woff2');
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Erode';
+    src: url('../assets/fonts/Erode-VariableItalic.woff2') format('woff2');
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'HK Grotesk';
+    src: url('../assets/fonts/HKGrotesk-Medium.woff2') format('woff2');
+    font-style: normal;
+}
+
 
 body {
     font-family: "Erode";
@@ -22,6 +42,7 @@ a, a:visited {
     color: $secondary;
     background: $accent;
     transition: 0.3s ease all;
+    word-wrap: break-word;
 }
 
 a:hover {
@@ -69,6 +90,7 @@ nav {
     column-gap: 1rem;
     padding: 1rem 0;
     border-bottom: 1px solid $accent;
+    line-height: 1.1;
 
     * {
         margin: 0;
@@ -93,6 +115,14 @@ nav {
 main {
     margin: 5rem 0;
     grid-column: 2 / span 4;
+
+    h1 {
+        border-top: 1px solid $accent;
+    }
+
+    p {
+        text-indent: 1rem;
+    }
 }
 
 footer {
@@ -100,7 +130,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 1rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
 
     * {
         grid-column: span 1;
@@ -108,12 +138,17 @@ footer {
 
     .logo {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 65px);
         column-gap: 0.5rem;
 
         * {
             grid-column: span 1;
         }
+    }
+
+    .icon {
+        vertical-align: bottom;
+        padding-bottom: 0.6rem;
     }
 
     img {
@@ -123,7 +158,8 @@ footer {
 
     h1 {
         margin: 0 0 1rem 0;
-        font-size: 1.1rem;
+        font-size: 0.8rem;
+        text-transform: uppercase;
     }
 
     ul {
@@ -135,12 +171,17 @@ footer {
         margin: 0;
         line-height: 1.5;
       }
+
+    a {
+        font-size: 0.9rem;
+        line-height: 2.2;
+    }
 }
 
 .title-card {
     text-align: center;
     height: 60vh;
-    background: rgba($secondary, 0.4);
+    // background: rgba($secondary, 0.4);
     // background: rgb(153,178,221);
     // background: linear-gradient(140deg, rgba(153,178,221,1) 0%, rgba(255,154,80,1) 20%, rgba(255,253,152,1) 63%, rgba(153,178,221,1) 100%);
     grid-column: 1 / span 5;
@@ -157,14 +198,14 @@ footer {
     .title {
         font-size: 4rem;
         margin: 0;
-        color: darken($main-color, 20%);
+        // color: darken($main-color, 20%);
         font-weight: bold;
     }
     
     .subtitle {
         margin: 0;
         font-size: 2.5rem;
-        color: darken($main-color, 20%);
+        // color: darken($main-color, 20%);
     }
 }
 
@@ -185,11 +226,80 @@ footer {
         align-content: center;
         justify-content: center;
         flex-wrap: wrap;
-        background: rgba($secondary, 0.4);
+        background: $secondary;
 
         * {
             width: 100%;
             margin: 0;
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    main {
+        grid-column: 1 / span 5;
+    }
+
+    footer .logo {
+        grid-column: 1 / 6;
+      }
+    
+      #faculty {
+        grid-column: 1 / 3;
+        grid-row: 3 / 3;
+      }
+    
+      #contacts {
+        grid-column: 1 / 6;
+        grid-row: 2 / 2;
+      }
+    
+      #assistants {
+        grid-column: 3 / 6;
+        grid-row: 3 / 3;
+      }
+    
+      #assistants li {
+        line-height: 1;
+        margin-bottom: 0.5rem;
+      }
+
+      nav {
+          column-gap: 0;
+
+          a {
+            font-size: 0.9rem;
+          }
+
+          .course-title {
+              display: none
+          }
+
+          ul {
+              grid-column: 2 / 5;
+
+              li {
+                  margin-right: 0.5rem;
+              }
+          }
+      }
+    
+      .title-card {
+          .title {
+              font-size: 2rem;
+          }
+
+          .subtitle {
+              font-size: 1.5rem;
+          }
+    }
+
+    .project-phases {
+        .phase {
+            height: auto;
+            margin: 1rem 0;
+            padding: 3rem 0;
+            grid-column: 1 / 4;
         }
     }
 }
