--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -49,8 +49,7 @@ a, a:visited {
 }
 
 a:hover {
-    background: $accent;
-    box-shadow: 0 0 8px 8px $main-color inset;
+    background: $main-color;
     color: #000000;
 }
 
@@ -120,6 +119,7 @@ aside {
     position: sticky;
     top: 4rem;
     height: 10vh;
+
     ul {
         padding: 0;
         grid-column: 3 / span 2;
@@ -133,10 +133,6 @@ aside {
 
 main {
     grid-column: 2 / span 4;
-
-    h1 {
-        border-top: 1px solid $accent;
-    }
 
     p {
         text-indent: 1rem;
@@ -204,7 +200,8 @@ footer {
 .title-card {
     text-align: center;
     height: 60vh;
-    // background: rgba($secondary, 0.4);
+    margin-bottom: 5rem;
+    background: $secondary;
     // background: rgb(153,178,221);
     // background: linear-gradient(140deg, rgba(153,178,221,1) 0%, rgba(255,154,80,1) 20%, rgba(255,253,152,1) 63%, rgba(153,178,221,1) 100%);
     grid-column: 1 / span 5;
@@ -237,7 +234,7 @@ footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 1rem;
-    margin: 0 0 5rem 0;
+    margin: 5rem 0;
 
     .phase {
         text-align: center;
